--- a/.github/workflows/auto_commit.yml
+++ b/.github/workflows/auto_commit.yml
@@ -1,17 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: AutoCommit
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
   schedule:
     # Once a day at 8 AM
-    - cron: 0 11 * * *
+    - cron: 1 11 0 * *
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
